--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    
 <body>
-    <!--  这里按照顺序依次打印出来界面，
-      h1的字体最大，每一行一行地打印 -->
+    <!--关于字体的大小：h1作为最大的标题，两个小标题用h2和h3，然后h4用作正文部分-->
     <h1>LeiZheng2005</h1>
     <h2>-基本信息</h2>
     <h4>  
@@ -25,8 +25,5 @@
       WeChat:leizheng1826<br>
     </h4>
 </body>
-
-
-
-
+    
 </html>
