--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h4> 
       Pages:https://LeiZheng2005.github.io<br>
       Github:https://github.com/LeiZheng2005<br>
+      Google:leizheng2005@gmail.com<br>
       WeChat:leizheng1826<br>
     </h4>
 </body>
