--- a/test02.html
+++ b/test02.html
@@ -47,14 +47,8 @@
         <p>Place of origin: Hengyang City, Hunan Province</p >
         <p>Education: <br>
           Bachelor Degree: Shaanxi University of Science and Technology</p>
-        <p>Major: Artificial Intelligence</p>
-        <p>Contact: <br>
-            WeChat: leizheng1826
-            Gmail:leizheng2005@gmail.com
-        </p>
-
+        <p>Major: Artificial Intelligence</p >
         <p>Links:<br>
-            <a href="https://LeiZheng2005.github.io" target="_blank">Mian_Pages</a>
             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
             <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a>
         </p>
@@ -67,25 +61,25 @@
         <!-- 学生工作，荣誉奖项，竞赛获奖，学术科研，其他经历 -->
         <h1>---本科经历---</h1>
             <h2>01.学生工作</h2>
-                <h3>2022-2023学年: </h3>
+                <h3>2022-2023学年：</h3>
                     <p>2022.09-2023.07: 电子信息类2202班班长</p>
                     <p>2022.09-2023.07: 校青年志愿者服务团管理部委员</p>
                     <p>2023.05-2023.11: 国际处学生助理</p>
-                <h3>2023-2024学:</h3>
+                <h3>2023-2024学年：</h3>
                     <p>2023.09-2024.07: 学院辅导员助理</p>
                     <p>2024.03-2025.04: 首届校图书馆阅读代言人</p>
                     <p>2023.09-2024.07: 电子信息类2301班新生班级助理</p>
                     <p>2023.09-2024.07: 国际社社长</p>
                     <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
-                <h3>2024-2025学年: </h3>
+                <h3>2024-2025学年：</h3>
             <h2>02.荣誉奖项</h2>
-                <h3>国家级: </h3>
+                <h3>国家级：</h3>
                     <p>2023.12: 中国大学生在线悦读青春全国百佳读书达人</p>
-                <h3>省部级: </h3>
+                <h3>省部级：</h3>
                     <p>2023.04: 西安华商报报道采访<a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">(原文地址)</a></p>
                     <p>2023.05: 陕西省第十三届文明礼仪优秀志愿者</p>
                     <p>2023.07: 上海赴外国际组织实习预备营实训证书</p>
-                <h3>校级: </h3>
+                <h3>校级：</h3>
                     <p>2023.04: 校图书馆年度阅读之星</p>
                     <p>2023.04: 校官微采访<a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">(原文地址)</a></p>
                     <p>2023.05: 优秀团员</p>
@@ -97,9 +91,9 @@
                     <p>2024.04: 校优秀学生干部奖学金</p>
                     <p>2024.04: 校三好学生</p>
             <h2>03.竞赛获奖</h2>
-                <h3>国家级: </h3>
+                <h3>国家级：</h3>
                     <p>2024.06: 第十五届蓝桥杯软件赛Python组国家三等奖</p>
-                <h3>省部级: </h3>
+                <h3>省部级：</h3>
                     <p>2022.12: 全国大学生英语翻译大赛省级一等奖</p>
                     <p>2023.04: 第十五届蓝桥杯软件赛C/C++组参与奖</p>
                     <p>2023.06: 全国大学生英语作文大赛省级一等奖</p>
@@ -107,7 +101,7 @@
                     <p>2024.04: 第十五届蓝桥杯软件赛Python组省级一等奖</p>
                     <p>2024.04: 团体程序设计天梯赛省级三等奖</p>
                     <p>2024.06: 第十七届全国大学生计算机设计大赛省级三等奖</p>
-                <h3>校级:</h3>
+                <h3>校级：</h3>
                     <p>2023.04: 全国大学生英语竞赛初赛参与奖</p>
                     <p>2023.06: 第十七届大学生高等数学竞赛校级一等奖</p>
                     <p>2023.12: 毛概视频社会实践校级展示最佳创意奖</p>
