--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="container">
     <div class="personal_basic_information">
-        <img src="https://github.com/LeiZheng2005/LeiZheng2005.github.io/blob/main/Images/Main_Pages/Yukki_Asuna.jpg?raw=true" alt="可爱的亚总～">
+        <img src="..Images/Main_Pages/Yukki_Asuna.jpg" alt="可爱的亚总～">
         <h2>LeiZheng2005</h2>
         <p>Name: Zheng Lei(雷政)</p >
         <p>Birthday: 2005.01.21</p >
