--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a>
         </p>
         <br>
-        <img src="..Images/Main_Pages/Yukki.jpg" width="100%" height="auto" alt="有纪～">
+        <img src="..Images/Main_Pages/Yukki.jpg"  alt="有纪～">
     </div>
 
     <div class="personal_details">
