--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 <footer>
     <p>&copy; 2024 Zheng Lei(雷政)</p>
 </footer>
-
+    
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s"></script>
+    
 </body>
 </html>
