--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <br>
 
 <!--         <img src="..Images/Main_Pages/Yukki.jpg"  alt="有纪～"> -->
+<!--         此处地球图片参考林华伟主页：https://huaweilin.net,谢谢参考！ -->
         <a href="https://clustrmaps.com/site/1c08h"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&cl=ffffff" /></a>
     </div>
 
