--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         width: 100%;
         position: fixed;
         bottom: 0;
-        padding: 5px 0;
+        padding: 3px 0;
         background-color: #f0f0f0;
     }
 </style>
@@ -39,36 +39,65 @@
 <body>
 
 <div class="container">
+<!--  左边分区的容器编辑-->
     <div class="personal_basic_information">
-<!--         <img src="..Images/Main_Pages/Yukki_Asuna.jpg"  alt="可爱的亚总～"> -->
+<!--         < img src="..Images/Main_Pages/Yukki_Asuna.jpg"  alt="可爱的亚总～"> -->
         <h2>LeiZheng2005</h2>
-        <p>Name: Zheng Lei(雷政)</p >
-        <p>Birthday: 2005.01.21</p >
-        <p>Place of origin: Hengyang City, Hunan Province</p >
-        <p>Education: <br>
-          Bachelor Degree: Shaanxi University of Science and Technology</p>
-        <p>Major: Artificial Intelligence</p>
-        <p>Contact: <br>
-            WeChat: leizheng1826
+<!--        大纲结构
+            01.基本信息：姓名，生日，籍贯，专业
+            02.教育：本科学历，研究生学历，博士学历等
+            03.联系方式：微信，gmail
+            04.相关链接：社交：个人网页 Code：github，kaggle，wakatime
+-->
+<!--    01.基本信息：生日，籍贯，专业-->
+        <p><strong><i>0.Basic:</i></strong> <br>
+            Name: Zheng Lei(雷政) <br>
+            Birth: 2005.01.21 <br>
+            Place: Xi'an China <br>
+            Origin Place: Hengyang City, Hunan Province <br>
+            Major: Artificial Intelligence
+        </p>
+
+<!--    02.教育工作经历：本科学历，研究生学历，博士学历，相关企业经历-->
+        <p><strong><i>1.Education:</i></strong> <br>
+            Bachelor: Shaanxi University of Science and Technology
+        </p>
+
+<!--    03.联系方式：微信以及邮箱-->
+        <p><strong><i>2.Contact:</i></strong> <br>
+            WeChat: leizheng1826<br>
             Gmail:leizheng2005@gmail.com
         </p>
 
-        <p>Links:<br>
-            <a href="https://LeiZheng2005.github.io" target="_blank">Mian_Pages</a>
-            <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
-            <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a>
+<!--     04.相关链接：社交：主页 Code：github，wakatime，kaggle-->
+        <p><strong><i>3.Links:</i></strong><br>
+            social:
+                <a href="https://LeiZheng2005.github.io" target="_blank">Mian_Pages</a> <br>
+
+            code:
+                <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
+                <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a>
+                <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a>
         </p>
-        <br>
 
-<!--         <img src="..Images/Main_Pages/Yukki.jpg"  alt="有纪～"> -->
+<!--         < img src="..Images/Main_Pages/Yukki.jpg"  alt="有纪～"> -->
 <!--         此处地球图片参考林华伟主页：https://huaweilin.net,谢谢参考！ -->
-        <a href="https://clustrmaps.com/site/1c08h"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&cl=ffffff" /></a>
-    </div>
+      <a href="https://clustrmaps.com/site/1c08h"  title="Visit LeiZheng2005Information tracker">
+        <img src="//www.clustrmaps.com/map_v2.png?d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&cl=ffffff" /></a>
 
+    </div>
+<!--  右边分区的容器编辑-->
     <div class="personal_details">
-        <!-- 统一字体分区显示 -->
         <!-- 学生工作，荣誉奖项，竞赛获奖，学术科研，其他经历 -->
         <h1>---本科经历---</h1>
+<!--        00.大纲结构：
+            01.学生工作：包含大学期间担任的各类职务
+            02.荣誉奖项：主要是新闻类，荣誉类，称号类，活动类奖项
+            03.竞赛获奖：主要是一些比赛相关，参与奖也写，我就写。
+            04.学术科研：主要写关于学术相关的，虽然还没有做出什么成果
+            05.其他经历：其他的暑假有什么活动什么的写上
+            -->
+<!--        01.学生工作部分-->
             <h2>01.学生工作</h2>
                 <h3>2022-2023学年: </h3>
                     <p>2022.09-2023.07: 电子信息类2202班班长</p>
@@ -81,9 +110,14 @@
                     <p>2023.09-2024.07: 国际社社长</p>
                     <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
                 <h3>2024-2025学年: </h3>
+
+<!--        02.荣誉奖项部分-->
             <h2>02.荣誉奖项</h2>
                 <h3>国家级: </h3>
-                    <p>2023.12: 中国大学生在线悦读青春全国百佳读书达人</p>
+                    <p>2023.12: 中国大学生在线悦读青春全国百佳读书达人
+                        <a href="https://dxs.moe.gov.cn/zx/a/ds/231218/1872012.shtml">(公示名单</a>
+                        <a href="https://univs-news-1256833609.file.myqcloud.com/123/upload/resources/file/8489833.docx">
+                        下载地址:序号68)</a></p>
                 <h3>省部级: </h3>
                     <p>2023.04: 西安华商报报道采访<a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">(原文地址)</a></p>
                     <p>2023.05: 陕西省第十三届文明礼仪优秀志愿者</p>
@@ -99,15 +133,25 @@
                     <p>2024.04: 校优秀学业奖学金一等奖</p>
                     <p>2024.04: 校优秀学生干部奖学金</p>
                     <p>2024.04: 校三好学生</p>
+
+<!--        03.竞赛获奖部分-->
             <h2>03.竞赛获奖</h2>
                 <h3>国家级: </h3>
-                    <p>2024.06: 第十五届蓝桥杯软件赛Python组国家三等奖</p>
+                    <p>2024.06: 第十五届蓝桥杯软件赛Python组国家三等奖
+                        <a href="https://dasai.lanqiao.cn/notices/1636">(公示地址</a>
+                        <a href="https://x-static.lanqiao.cn/upload/202406/courseimg/b5c3e9cc-0ec5-4a3d-a89a-0637b950423e.rar">
+                          下载地址)</a>
+                    </p>
                 <h3>省部级: </h3>
                     <p>2022.12: 全国大学生英语翻译大赛省级一等奖</p>
                     <p>2023.04: 第十五届蓝桥杯软件赛C/C++组参与奖</p>
                     <p>2023.06: 全国大学生英语作文大赛省级一等奖</p>
                     <p>2023.12: 第十四届全国周培源大学生力学竞赛(陕西赛区)三等奖</p>
-                    <p>2024.04: 第十五届蓝桥杯软件赛Python组省级一等奖</p>
+                    <p>2024.04: 第十五届蓝桥杯软件赛Python组省级一等奖
+                        <a href="https://dasai.lanqiao.cn/notices/1615">(公示地址</a>
+                        <a href="https://x-static.lanqiao.cn/upload/202404/courseimg/2d1afdd4-e563-4394-9875-d52e1a7a3994.rar">
+                          下载地址)</a>
+                    </p>
                     <p>2024.04: 团体程序设计天梯赛省级三等奖</p>
                     <p>2024.06: 第十七届全国大学生计算机设计大赛省级三等奖</p>
                 <h3>校级:</h3>
@@ -119,15 +163,20 @@
                     <p>2024.04: 第十四届复兴赛校级参与奖</p>
                     <p>2024.04: 大学生创新创业院级参与奖</p>
                     <p>2024.04: 全国大学生英语竞赛初赛参与奖</p>
+
+<!--        04.学术科研部分-->
             <h2>04.学术科研</h2>
                     <p>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
                     <p>2024.05-2024.08: 陕西科技大学水下目标检测实验室</p>
-            <h2>05.其他经历</h2>
-        <p>2023.07-2023.07: 上海赴外国际组织实习预备营</p>
 
-        <!-- 更多详细个人简介 -->
+<!--        05.其他经历-->
+            <h2>05.其他经历</h2>
+                    <p>2023.07-2023.07: 上海赴外国际组织实习预备营</p>
+
     </div>
 </div>
+
+
 
 <footer>
     <p>&copy; 2024 Zheng Lei(雷政)</p>
