--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </style>
 </head>
 <body>
-
+<!--现在想试一下能否在pycharm上编辑好了直接提交上去-->
 <div class="container">
 <!--  左边分区的容器编辑-->
     <div class="personal_basic_information">
@@ -50,7 +50,7 @@
             04.相关链接：社交：个人网页 Code：github，kaggle，wakatime
 -->
 <!--    01.基本信息：生日，籍贯，专业-->
-        <p><strong><i>0.Basic:</i></strong> <br>
+        <p><strong><i>0.Basic:0000</i></strong> <br>
             Name: Zheng Lei(雷政) <br>
             Birth: 2005.01.21 <br>
             Place: Xi'an China <br>
