--- a/index.html
+++ b/index.html
@@ -1,40 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LeiZheng2005Information</title>
-<style>
-    .container {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        gap: 20px; /* 列之间的间隔 */
-        margin: 0 auto;
-    }
-
-    .personal_basic_information {/* 左半区修改*/
-        background-color: #ffffff;
-    }
-
-
-    .personal_details {/* 右半区修改*/
-        background-color: #ffffff;
-    }
-    /*关于字体格式的修改*/
-    p{
-        font-family: KaiTi_GB2312 ;
-    }
-
-    footer{
-        text-align: center;
-        color: #000000;
-        width: 100%;
-        position: fixed;
-        bottom: 0;
-        padding: 3px 0;
-        background-color: #f0f0f0;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LeiZheng2005Information</title>
+    <link rel="stylesheet" href="CSS_Code/index_Style_CSS.css">
 </head>
 <body>
 <!--现在想试一下能否在pycharm上编辑好了直接提交上去-->
