--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -38,6 +38,11 @@
                 <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
                 <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a>
                 <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a>
+                <br>
+            tags:
+                <a href="https://wakatime.com/@0840e613-b8b1-4a2d-8adb-8d847e8ff7ed">
+                    <img src="https://wakatime.com/badge/user/0840e613-b8b1-4a2d-8adb-8d847e8ff7ed.svg"
+                         alt="Total time coded since Jun 28 2024" /></a>
         </p>
     </section>
 
