--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Awards.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Awards.html
@@ -7,26 +7,28 @@
     <link rel="stylesheet" href="../../../../CSS_Code/Index_Style_CSS.css">
 </head>
 <body>
-    <h2>02.荣誉奖项</h2>
-        <h3>国家级: </h3>
-            <p>2023.12: 中国大学生在线悦读青春全国百佳读书达人
-                <a href="https://dxs.moe.gov.cn/zx/a/ds/231218/1872012.shtml">(公示名单</a>
-                <a href="https://univs-news-1256833609.file.myqcloud.com/123/upload/resources/file/8489833.docx">
-                下载地址:序号68)</a></p>
-        <h3>省部级: </h3>
-            <p>2023.04: 西安华商报报道采访<a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">(原文地址)</a></p>
-            <p>2023.05: 陕西省第十三届文明礼仪优秀志愿者</p>
-            <p>2023.07: 上海赴外国际组织实习预备营实训证书</p>
-        <h3>校级: </h3>
-            <p>2023.04: 校图书馆年度阅读之星</p>
-            <p>2023.04: 校官微采访<a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">(原文地址)</a></p>
-            <p>2023.05: 优秀团员</p>
-            <p>2023.06: 校青年志愿者服务团优秀委员</p>
-            <p>2024.03: 校官微采访<a href="https://mp.weixin.qq.com/s/m-RiR8QaW6mb4-wNcY9cig" target="_blank">(原文地址)</a></p>
-            <p>2024.04: 校图书馆年度阅读之星</p>
-            <p>2024.05: 校阅读代言人<a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w" target="_blank">(原文地址)</a></p>
-            <p>2024.04: 校优秀学业奖学金一等奖</p>
-            <p>2024.04: 校优秀学生干部奖学金</p>
-            <p>2024.04: 校三好学生</p>
+<section id="Awards">
+<h2>02.荣誉奖项</h2>
+    <h3>国家级: </h3>
+        <p>2023.12: 中国大学生在线悦读青春全国百佳读书达人
+            <a href="https://dxs.moe.gov.cn/zx/a/ds/231218/1872012.shtml">(公示名单</a>
+            <a href="https://univs-news-1256833609.file.myqcloud.com/123/upload/resources/file/8489833.docx">
+            下载地址:序号68)</a></p>
+    <h3>省部级: </h3>
+        <p>2023.04: 西安华商报报道采访<a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">(原文地址)</a></p>
+        <p>2023.05: 陕西省第十三届文明礼仪优秀志愿者</p>
+        <p>2023.07: 上海赴外国际组织实习预备营实训证书</p>
+    <h3>校级: </h3>
+        <p>2023.04: 校图书馆年度阅读之星</p>
+        <p>2023.04: 校官微采访<a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">(原文地址)</a></p>
+        <p>2023.05: 优秀团员</p>
+        <p>2023.06: 校青年志愿者服务团优秀委员</p>
+        <p>2024.03: 校官微采访<a href="https://mp.weixin.qq.com/s/m-RiR8QaW6mb4-wNcY9cig" target="_blank">(原文地址)</a></p>
+        <p>2024.04: 校图书馆年度阅读之星</p>
+        <p>2024.05: 校阅读代言人<a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w" target="_blank">(原文地址)</a></p>
+        <p>2024.04: 校优秀学业奖学金一等奖</p>
+        <p>2024.04: 校优秀学生干部奖学金</p>
+        <p>2024.04: 校三好学生</p>
+</section>
 </body>
 </html>
