--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 <h1 style="text-align: center">---本科---</h1>
-    <iframe src="Student_Work.html" width="100%" onload="resizeIframe(this)"></iframe>
+    <div class="iframe-container">
+    <iframe src="Student.html" width="100%" onload="resizeIframe(this)"></iframe>
     <iframe src="Awards.html" width="100%" onload="resizeIframe(this)"></iframe>
     <iframe src="Competition.html" width="100%" onload="resizeIframe(this)"></iframe>
     <iframe src="Academic.html" width="100%" onload="resizeIframe(this)"></iframe>
     <iframe src="Others.html" width="100%" onload="resizeIframe(this)"></iframe>
+    </div>
 </body>
 </html>
