--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Competition.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Competition.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../../../CSS_Code/Index_Style_CSS.css">
 </head>
 <body>
+<section id="Competition">
 <h2>03.竞赛获奖</h2>
     <h3>国家级: </h3>
         <p>2024.06: 第十五届蓝桥杯软件赛Python组国家三等奖
@@ -36,4 +37,5 @@
         <p>2024.04: 大学生创新创业院级参与奖</p>
         <p>2024.04: 全国大学生英语竞赛初赛参与奖</p>
 </body>
+</section>
 </html>
