--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Others.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Others.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../../../../CSS_Code/Index_Style_CSS.css">
 </head>
 <body>
-<h2>
+<section id="Awards">
+<h2>Others</h2>
     <h3>Skills:</h3>
     <p>Code:Python,C++,Java,HTML,CSS,Shell</p>
     <p>Tool:PyCharm,Github,PyTorch,Anaconda,Kaggle,Typora</p>
@@ -18,7 +19,7 @@
     <p></p>
     <p></p>
     <p></p>
-</h2>
+</section>
 </body>
 </html>
 
