--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Academic.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Academic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../../../../CSS_Code/Index_Style_CSS.css">
 </head>
 <body>
+<section id="Academic">
 <h2>04.学术科研</h2>
-        <p>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
-        <p>2024.05-2024.08: 陕西科技大学水下目标检测实验室</p>
+    <p>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
+    <p>2024.05-2024.08: 陕西科技大学水下目标检测实验室</p>
+</section>
 </body>
 </html>
