--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 <!--  左边分区的容器编辑-->
 <div class="personal_basic_information">
     <h2>LeiZheng2005</h2>
-    <iframe src="HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html"
-            width='100%' onload="resizeIframe(this)"></iframe>
+    <div class="iframe-container">
+        <iframe src="HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html"
+                onload="resizeIframe(this)"></iframe>
+    </div>
 </div>
 
 <!--  右边分区的容器编辑-->
     <div class="personal_details">
         <!-- 学生工作，荣誉奖项，竞赛获奖，学术科研，其他经历 -->
-        <iframe src="HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html"
-                width="100%" onload="resizeIframe(this)"></iframe>
+        <div class="iframe-container">
+            <iframe src="HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html"
+                width="100%" onload="resizeIframe(this)" ></iframe>
+        </div>
     </div>
 </div>
 
@@ -28,8 +32,9 @@
 </footer>
 <script>
     function resizeIframe(obj) {
-        obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-    }
+    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+}
 </script>
+
 </body>
 </html>
