--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeiZheng2005Information</title>
+    <title>谢谢你今天来看我~</title>
     <link rel="stylesheet" href="CSS_Code/Index_Style_CSS.css">
 </head>
 <body>
