--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
@@ -59,6 +59,7 @@
             </p>
             <p>2024.04: 团体程序设计天梯赛省级三等奖</p>
             <p>2024.06: 第十七届全国大学生计算机设计大赛省级三等奖</p>
+            <p>2024.07: 第十二届全国大学生光电设计竞赛西北赛区二等奖</p>
         <h3>校级:</h3>
             <p>2023.04: 全国大学生英语竞赛初赛参与奖</p>
             <p>2023.06: 第十七届大学生高等数学竞赛校级一等奖</p>
