--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -29,7 +29,7 @@
 
         code:
             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
-            <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a>
+<!--             <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a> -->
 <!--             <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a> -->
             <br>
         tags:
