--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -25,12 +25,15 @@
 <section id="links">
     <p><strong><i>3.Links:</i></strong><br>
         donate:
-            <a href="../../../donate.html" target="_blank">donate</a> <br>
-<!--        blog:-->
-
+            <a href="../../../donate.html" target="_blank">WeChat/AliPay/Bitcoin/USDT</a> <br>
+        blog:
+            <a href="https://www.zhihu.com/people/cheng-yu-42-63/collections" target="_blank">Zhihu</a>
+            <a href="https://blog.csdn.net/loveAsunadeKoono" target="_blank">CSDN</a> <br>
+        video:
+            <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a> 
+            <a href="https://www.youtube.com/@leizheng2005" target="_blank">Youtube</a> <br>
         social:
             <a href="https://LeiZheng2005.github.io" target="_blank">Mian_Pages</a> <br>
-
         code:
             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
 <!--             <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a> -->
