--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -27,7 +27,7 @@
         donate:
             <a href="../../../donate.html" target="_blank">WeChat/AliPay/Bitcoin/USDT</a> <br>
         blog:
-            <a href="https://www.zhihu.com/people/cheng-yu-42-63/collections" target="_blank">Zhihu</a>
+            <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">Zhihu</a>
             <a href="https://blog.csdn.net/loveAsunadeKoono" target="_blank">CSDN</a> <br>
         video:
             <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a> 
