--- a/donate.html
+++ b/donate.html
@@ -27,6 +27,7 @@
     <p>If you'd like to support me, please consider donating to my personal account:</p>
     <p>(WeChat Pay, Ali Pay, Binance Pay)</p>
     <h1>自愿捐款，概不退款。</h1>
+    <h2>~目前西安在读，可兼职家教等其他临时工作，微信或邮箱联系均可，谢谢~</h2>
     <p>WeChat Pay</p>
     <div class="image-container">
         <img src="HTML_Code/Main_Pages_Code/Left_HTML_Code/Donate_images/WeChat_Pay.jpg" width=300px height=auto>
