--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -47,6 +47,11 @@
 </section>
 
 <section id="tracker">
+    <a href="https://www.easycounter.com/">
+        <img src="https://www.easycounter.com/counter.php?leizheng2005"
+        border="0" alt="page counter"></a>
+        <br><a href="https://www.easycounter.com/">Web Counter</a>
+    
     <a href="https://clustrmaps.com/site/1c08h" title="Visit LeiZheng2005 Information tracker">
         <img src="//www.clustrmaps.com/map_v2.png?d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&cl=ffffff" />
     </a>
