--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Student.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Student.html
@@ -2,13 +2,19 @@
 <h2>01.学生工作</h2>
 <h3>2022-2023学年: </h3>
     <p>2022.09-2023.07: 电子信息类2202班班长</p>
-    <p>2022.09-2023.07: 校青年志愿者服务团管理部委员</p>
+    <p>2022.09-2023.07: 校青年志愿者服务团管理部委员
+        <a href="https://mp.weixin.qq.com/s/YsmHp_hQqq7CrqRQ70Pteg">
+            (公示地址: 管理部序号14)</a></p>
     <p>2023.05-2023.11: 国际处学生助理</p>
 <h3>2023-2024学年:</h3>
     <p>2023.09-2024.07: 学院辅导员助理</p>
-    <p>2024.03-2025.04: 首届校图书馆阅读代言人</p>
-    <p>2023.09-2024.07: 电子信息类2301班新生班级助理</p>
+    <p>2024.03-2025.04: 首届校图书馆阅读代言人
+        <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w">
+            (公示地址: 电子信息与人工智能学院)</a></p>
+    <p>2023.09-2024.07: 电子信息类2301班新生班级助理
+        <a href="https://mp.weixin.qq.com/s/Xlux-d6lwkuRdyGFofNNFg">
+            (公示地址: 序号1)</a></p>
     <p>2023.09-2024.07: 国际社社长</p>
     <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
-<h3>2024-2025学年: </h3>
+<!--<h3>2024-2025学年: </h3>-->
 </section>
