--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
@@ -1,82 +1,121 @@
 <div class="iframe-container">
+<!--学生工作#############################################################################-->
     <section id="Student">
-        <h2>01.学生工作</h2>
+    <h2>01.学生工作</h2>
         <h3>2022-2023学年: </h3>
             <p>2022.09-2023.07: 电子信息类2202班班长</p>
-            <p>2022.09-2023.07: 校青年志愿者服务团管理部委员</p>
+            <p>2022.09-2023.07: 校青年志愿者服务团管理部委员
+                <a href="https://mp.weixin.qq.com/s/YsmHp_hQqq7CrqRQ70Pteg">
+                    (公示地址: 管理部序号14)</a></p>
             <p>2023.05-2023.11: 国际处学生助理</p>
         <h3>2023-2024学年:</h3>
             <p>2023.09-2024.07: 学院辅导员助理</p>
-            <p>2024.03-2025.04: 首届校图书馆阅读代言人</p>
-            <p>2023.09-2024.07: 电子信息类2301班新生班级助理</p>
+            <p>2024.03-2025.04: 首届校图书馆阅读代言人
+                <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w">
+                    (公示地址: 电子信息与人工智能学院)</a></p>
+            <p>2023.09-2024.07: 电子信息类2301班新生班级助理
+                <a href="https://mp.weixin.qq.com/s/Xlux-d6lwkuRdyGFofNNFg">
+                    (公示地址: 序号1)</a></p>
             <p>2023.09-2024.07: 国际社社长</p>
             <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
-        <h3>2024-2025学年: </h3>
+<!--        <h3>2024-2025学年: </h3>-->
     </section>
-
-
+<!--荣誉奖项#############################################################################-->
     <section id="Awards">
     <h2>02.荣誉奖项</h2>
         <h3>国家级: </h3>
             <p>2023.12: 中国大学生在线悦读青春全国百佳读书达人
                 <a href="https://dxs.moe.gov.cn/zx/a/ds/231218/1872012.shtml">(公示名单</a>
                 <a href="https://univs-news-1256833609.file.myqcloud.com/123/upload/resources/file/8489833.docx">
-                下载地址:序号68)</a></p>
+                下载地址: 序号68)</a></p>
         <h3>省部级: </h3>
-            <p>2023.04: 西安华商报报道采访<a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">(原文地址)</a></p>
-            <p>2023.05: 陕西省第十三届文明礼仪优秀志愿者</p>
+            <p>2023.04: 西安华商报报道采访
+                <a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">
+                    (原文地址)</a></p>
+            <p>2023.05: 陕西省第十三届文明礼仪优秀志愿者
+                <a href="https://mp.weixin.qq.com/s/dPASVTtlkAvrj8drvMz8IQ">
+                    (活动地址: 考务办)</a></p>
             <p>2023.07: 上海赴外国际组织实习预备营实训证书</p>
         <h3>校级: </h3>
             <p>2023.04: 校图书馆年度阅读之星</p>
-            <p>2023.04: 校官微采访<a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">(原文地址)</a></p>
+            <p>2023.04: 校官微采访
+                <a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">
+                    (原文地址)</a></p>
             <p>2023.05: 优秀团员</p>
             <p>2023.06: 校青年志愿者服务团优秀委员</p>
-            <p>2024.03: 校官微采访<a href="https://mp.weixin.qq.com/s/m-RiR8QaW6mb4-wNcY9cig" target="_blank">(原文地址)</a></p>
+            <p>2024.03: 校官微采访
+                <a href="https://mp.weixin.qq.com/s/m-RiR8QaW6mb4-wNcY9cig" target="_blank">
+                    (原文地址)</a></p>
             <p>2024.04: 校图书馆年度阅读之星</p>
-            <p>2024.05: 校阅读代言人<a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w" target="_blank">(原文地址)</a></p>
-            <p>2024.04: 校优秀学业奖学金一等奖</p>
-            <p>2024.04: 校优秀学生干部奖学金</p>
+            <p>2024.05: 校阅读代言人
+                <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w" target="_blank">
+                    (原文地址)</a></p>
+            <p>2024.04: 校优秀学业奖学金一等奖
+                <a href="https://dianzhi.www.sust.edu.cn/info/4703/38512.htm" target="_blank">
+                    (原文地址: 序号28)</a></p>
+            <p>2024.04: 校优秀学生干部奖学金
+                <a href="https://dianzhi.www.sust.edu.cn/info/4703/38512.htm" target="_blank">
+                    (原文地址: 序号366)</a></p>
             <p>2024.04: 校三好学生</p>
     </section>
-
+<!--竞赛获奖#############################################################################-->
     <section id="Competition">
     <h2>03.竞赛获奖</h2>
         <h3>国家级: </h3>
             <p>2024.06: 第十五届蓝桥杯软件赛Python组国家三等奖
-                <a href="https://dasai.lanqiao.cn/notices/1636">(公示地址</a>
+                <a href="https://dasai.lanqiao.cn/notices/1636">
+                    (公示地址</a>
                 <a href="https://x-static.lanqiao.cn/upload/202406/courseimg/b5c3e9cc-0ec5-4a3d-a89a-0637b950423e.rar">
-                  下载地址)</a>
+                    下载地址)</a>
             </p>
         <h3>省部级: </h3>
             <p>2022.12: 全国大学生英语翻译大赛省级一等奖</p>
             <p>2023.04: 第十五届蓝桥杯软件赛C/C++组参与奖</p>
             <p>2023.06: 全国大学生英语作文大赛省级一等奖</p>
+            <p>2023.11: 第十五届大学生高等数学竞赛省级参与奖</p>
             <p>2023.12: 第十四届全国周培源大学生力学竞赛(陕西赛区)三等奖</p>
             <p>2024.04: 第十五届蓝桥杯软件赛Python组省级一等奖
-                <a href="https://dasai.lanqiao.cn/notices/1615">(公示地址</a>
+                <a href="https://dasai.lanqiao.cn/notices/1615">
+                    (公示地址</a>
                 <a href="https://x-static.lanqiao.cn/upload/202404/courseimg/2d1afdd4-e563-4394-9875-d52e1a7a3994.rar">
-                  下载地址)</a>
-            </p>
+                  下载地址)</a></p>
             <p>2024.04: 团体程序设计天梯赛省级三等奖</p>
             <p>2024.06: 第十七届全国大学生计算机设计大赛省级三等奖</p>
-            <p>2024.07: 第十二届全国大学生光电设计竞赛西北赛区二等奖</p>
+            <p>2024.07: 第十二届全国大学生光电设计竞赛西北赛区二等奖
+                <a href="https://gdxbsq.moocollege.com/datacenter/news/detail?id=7932">
+                    (公示地址</a>,
+                <a href="https://oss.moocollege.com/24334/edit/JNVH8OKq_1721641614293.pdf">
+                    下载地址: 序号80)</a></p>
+            <p>2024.07: 中国高校计算机大赛-大数据挑战赛
+                <a href="https://www.heywhale.com/org/bdc/competition/area/6662bf9a8d6c97c5d0c6bb10/leaderboard">
+                    初赛A榜150/461</a>,
+                <a href="https://www.heywhale.com/org/bdc/competition/area/6662bf9a8d6c97c5d0c6bb10/leaderboard">
+                    初赛B榜147/230</a></p>
         <h3>校级:</h3>
             <p>2023.04: 全国大学生英语竞赛初赛参与奖</p>
             <p>2023.06: 第十七届大学生高等数学竞赛校级一等奖</p>
             <p>2023.12: 毛概视频社会实践校级展示最佳创意奖</p>
-            <p>2024.04: 第十四届正大杯校级优秀奖</p>
-            <p>2024.04: 第十四届三创赛校级参与奖</p>
+            <p>2024.04: 第十四届正大杯校级优秀奖
+                <a href="https://jg.sust.edu.cn/info/1011/9532.htm">
+                    (公示地址</a>,
+                <a href="https://jg.sust.edu.cn/system/_content/download.jsp?urltype=news.DownloadAttachUrl&owner=1685613331&wbfileid=6DAA5A2541CF06312809A622052485B1">
+                    下载地址)</a></p>
+            <p>2024.04: 第十四届三创赛校级参与奖
+                <a href="https://jg.sust.edu.cn/info/1011/9722.htm">
+                    (公示地址</a>,
+                <a href="https://jg.sust.edu.cn/system/_content/download.jsp?urltype=news.DownloadAttachUrl&owner=1685613331&wbfileid=1AE6F6DE312A58FAF23DD6A468986566">
+                    下载地址)</a></p>
             <p>2024.04: 第十四届复兴赛校级参与奖</p>
             <p>2024.04: 大学生创新创业院级参与奖</p>
             <p>2024.04: 全国大学生英语竞赛初赛参与奖</p>
     </section>
-
+<!--学术科研#############################################################################-->
     <section id="Academic">
         <h2>04.学术科研</h2>
             <p>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
             <p>2024.05-2024.08: 陕西科技大学水下目标检测实验室</p>
     </section>
-
+<!--其他活动#############################################################################-->
     <section id="Others">
     <h2>Others</h2>
         <h3>Skills:</h3>
