--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Student.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Student.html
@@ -16,5 +16,6 @@
             (公示地址: 序号1)</a></p>
     <p>2023.09-2024.07: 国际社社长</p>
     <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
-<!--<h3>2024-2025学年: </h3>-->
+<h3>2024-2025学年: </h3>
+    <p>2024.08-2025.07: 人工智能242班新生班级助理
 </section>
