--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -1,3 +1,5 @@
+<script type='text/javascript' id='clustrmaps' 
+    src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=000000'></script>
 
 <section id="basic">
     <p><strong><i>0.Basic:</i></strong> <br>
