--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -37,7 +37,7 @@
             <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a> 
             <a href="https://www.youtube.com/@leizheng2005" target="_blank">Youtube</a> <br> -->
         social:
-            <a href="https://LeiZheng2005.github.io" target="_blank">Home_Page</a> <br>
+            <a href="https://LeiZheng2005.github.io" target="_blank">Home</a> <br>
         code:
             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
 <!--             <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a> -->
