--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
@@ -7,7 +7,7 @@
             <p>2022.09-2023.07: 校青年志愿者服务团管理部委员
                 <a href="https://mp.weixin.qq.com/s/YsmHp_hQqq7CrqRQ70Pteg">
                     (公示地址: 管理部序号14)</a></p>
-            <p>2023.05-2023.11: 国际处学生助理</p>
+            <p>2023.05-2023.11: 陕西科技大学国际交流与合作处学生助理</p>
         <h3>2023-2024学年:</h3>
             <p>2023.09-2024.07: 学院辅导员助理</p>
             <p>2024.03-2025.04: 首届校图书馆阅读代言人
@@ -16,11 +16,11 @@
             <p>2023.09-2024.07: 电子信息类2301班新生班级助理
                 <a href="https://mp.weixin.qq.com/s/Xlux-d6lwkuRdyGFofNNFg">
                     (公示地址: 序号1)</a></p>
-            <p>2023.09-2024.07: 国际社社长</p>
+            <p>2023.09-2024.07: 陕西科技大学国际交流社社长</p>
             <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
        <h3>2024-2025学年: </h3>
+            <p>2024.07-2025.07: 学院辅导员助理</p>
             <p>2024.08-2025.07: 人工智能242班新生班级助理</p>
-        
     </section>
 <!--荣誉奖项#############################################################################-->
     <section id="Awards">
@@ -112,11 +112,11 @@
             <p>2024.04: 全国大学生英语竞赛初赛参与奖</p>
     </section>
 <!--学术科研#############################################################################-->
-    <section id="Academic">
+<!--     <section id="Academic">
         <h2>04.学术科研</h2>
             <p>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
             <p>2024.05-2024.08: 陕西科技大学水下目标检测实验室</p>
-    </section>
+    </section> -->
 <!--其他活动#############################################################################-->
     <section id="Others">
     <h2>Others</h2>
