--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>谢谢你今天来看我~</title>
-    <link rel="shortcut icon" href="Images/Main_Pages/Yukki_Asuna.ico">
+    <link rel="shortcut icon" href="Images/Main_Pages/Yukki_Asuna.ico"/>
     <link rel="stylesheet" href="CSS_Code/Index_Style_CSS.css">
 </head>
 <body>
