--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
@@ -20,7 +20,9 @@
             <p>2023.09-2024.07: 黑豆计算机协会副会长</p>
        <h3>2024-2025学年: </h3>
             <p>2024.07-2025.07: 学院辅导员助理</p>
-            <p>2024.08-2025.07: 人工智能242班新生班级助理</p>
+            <p>2024.08-2025.07: 人工智能242班新生班级助理
+                <a href='https://mp.weixin.qq.com/s/86XQmeYCVR4HqGvnNQ4RZQ'>
+                (公示地址)</a></p>
     </section>
 <!--荣誉奖项#############################################################################-->
     <section id="Awards">
