--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Student.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Student.html
@@ -20,6 +20,5 @@
         <p>2024.07-2025.07: 学院辅导员助理</p>
         <p>2024.08-2025.07: 人工智能242班新生班级助理
             <a href='https://mp.weixin.qq.com/s/86XQmeYCVR4HqGvnNQ4RZQ'>
-                (公示地址)
-            </p>
+                (公示地址)</a></p>
 </section>
