--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -30,16 +30,19 @@
             <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">ORCID</a> <br>
 <!--         donate:
             <a href="../../../donate.html" target="_blank">WeChat/AliPay/Bitcoin/USDT</a> <br> -->
-        blog:
-            <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">Zhihu</a>
-            <a href="https://blog.csdn.net/loveAsunadeKoono" target="_blank">CSDN</a> <br>
+<!--         blog: -->
+<!--             <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">Zhihu</a> -->
+<!--             <a href="https://blog.csdn.net/loveAsunadeKoono" target="_blank">CSDN</a> <br> -->
 <!--         video:
             <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a> 
             <a href="https://www.youtube.com/@leizheng2005" target="_blank">Youtube</a> <br> -->
-        social:
-            <a href="https://LeiZheng2005.github.io" target="_blank">Home</a> <br>
-        code:
+        website:
+            <a href="https://LeiZheng2005.github.io" target="_blank">Homepage</a>
             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>
+            <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">Zhihu</a>
+            <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a><br> 
+<!--         code: -->
+<!--             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a> -->
 <!--             <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a> -->
 <!--             <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a> -->
             <br>
