--- a/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
+++ b/HTML_Code/Main_Pages_Code/Right_HTML_Code/Bachelor_HTML_Code/Bachelor_Main.html
@@ -114,17 +114,17 @@
             <p>2024.04: 全国大学生英语竞赛初赛参与奖</p>
     </section>
 <!--学术科研#############################################################################-->
-<!--     <section id="Academic">
+    <section id="Academic">
         <h2>04.学术科研</h2>
             <p>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
-            <p>2024.05-2024.08: 陕西科技大学水下目标检测实验室</p>
-    </section> -->
+            <p>2024.07-2024.09: 陕西科技大学水下目标检测实验室</p>
+    </section>
 <!--其他活动#############################################################################-->
     <section id="Others">
     <h2>Others</h2>
         <h3>Skills:</h3>
-        <p>Code:Python,C++,Java,HTML,CSS,Shell</p>
-        <p>Tool:PyCharm,Github,PyTorch,Anaconda,Kaggle,Typora</p>
+        <p>Code: Python,C++,Java,HTML,CSS,Shell</p>
+        <p>Tool: PyCharm,Github,PyTorch,Anaconda,Kaggle,Typora</p>
         <h3>Experience:</h3>
         <p>2023.07: 上海赴外国际组织实习</p>
         <p></p>
