--- a/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
+++ b/HTML_Code/Main_Pages_Code/Left_HTML_Code/basic_information.html
@@ -1,7 +1,7 @@
-<script type='text/javascript' id='clustrmaps' 
-    src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=000000'></script>
 
 <section id="basic">
+<!--    插入图片-->
+    <img src="Images/2023.04picture.jpg" alt="描述" style="max-width: 50%; height: auto;">
     <p><strong><i>0.Basic:</i></strong> <br>
         Name: Zheng Lei (雷政) <br>
         Birth: 2005.01.21 <br>
@@ -26,7 +26,7 @@
 
 <section id="links">
     <p><strong><i>3.Links:</i></strong><br>
-        website:
+        webs:
             <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">
                 <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID Logo" style="width: 20px; height: 20px;"></a>
             <a href="https://github.com/LeiZheng2005" target="_blank">
@@ -37,24 +37,6 @@
                 <img src="https://static.zhihu.com/heifetz/favicon.ico" alt="Zhihu Logo" style="width: 20px; height: 20px;"></a>
             <a href="https://space.bilibili.com/3493282034223793" target="_blank">
                 <img src="https://www.bilibili.com/favicon.ico" alt="Bilibili Logo" style="width: 20px; height: 20px;"></a>
-<!--        academic:-->
-<!--            <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">ORCID</a> <br>-->
-<!--         donate:
-            <a href="../../../donate.html" target="_blank">WeChat/AliPay/Bitcoin/USDT</a> <br> -->
-<!--         blog: -->
-<!--             <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">Zhihu</a> -->
-<!--             <a href="https://blog.csdn.net/loveAsunadeKoono" target="_blank">CSDN</a> <br> -->
-<!--         video:
-            <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a>
-            <a href="https://www.youtube.com/@leizheng2005" target="_blank">Youtube</a> <br> -->
-<!--            <a href="https://LeiZheng2005.github.io" target="_blank">Homepage</a>-->
-<!--            <a href="https://github.com/LeiZheng2005" target="_blank">Github</a>-->
-<!--            <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">Zhihu</a>-->
-<!--            <a href="https://space.bilibili.com/3493282034223793" target="_blank">BiliBili</a><br> -->
-<!--         code: -->
-<!--             <a href="https://github.com/LeiZheng2005" target="_blank">Github</a> -->
-<!--             <a href="https://wakatime.com/@LeiZheng2005" target="_blank">Wakatime</a> -->
-<!--             <a href="https://www.kaggle.com/leizheng2005" target="_blank">Kaggle</a> -->
             <br>
         tags:
             <a href="https://wakatime.com/@0840e613-b8b1-4a2d-8adb-8d847e8ff7ed">
@@ -63,12 +45,12 @@
     </p>
 </section>
 
+
+<script type='text/javascript' id='clustrmaps'
+    src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=000000'></script>
 <section id="tracker">
     <a href="https://www.easycounter.com/">
         <img src="https://www.easycounter.com/counter.php?leizheng2005"
         border="0" alt="page counter"></a> <br>
-<!--     <a href="https://clustrmaps.com/site/1c08h" title="Visit LeiZheng2005 Information tracker">
-        <img src="//www.clustrmaps.com/map_v2.png?d=D4ibkrZmxgXfriWMNlGcuMU4RNKESv1nEuWPEFqx2_s&cl=ffffff" />
-    </a> -->
 </section>
 
