--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -531,8 +531,8 @@
                       <span lang="en">Versions:</span>
                     </p>
                       <ul style="padding-left: 40px;">
-                          <li><a href="Version/Version1-0">Version1-0</a></li>
-                          <li><a href="Version/Version1-1">Version1-1</a></li>
+                          <li><a href="Version/Version1-0/version1-0.html">Version1-0</a></li>
+                          <li><a href="Version/Version1-1/version1-1.html">Version1-1</a></li>
                       </ul>
 
                           <script type='text/javascript' id='clustrmaps'
