--- a/news.html
+++ b/news.html
@@ -1,5 +1,6 @@
 <div class="iframe-container">
     <h2 style="text-align: center">---News---</h2>
+        <p>2024.11.04: [小事] 网站正式更新一版，好久没更新了。</p>
         <p>2024.11.01: [小事] 收到我哥的红包了，还是很开心的。</p>
         <p>2024.10.31: [小事] 想起七年前的不开心的事情了哈哈。</p>
         <p>2024.10.30: [小事] 为简单庆祝某事，吃了纸包鱼，好久没吃了。</p>
@@ -22,6 +23,7 @@
         <p>2024.07.22: [小事] 一个人去灞桥散步，当时不开心吧。</p>
         <p>2024.07.21: [电影] 一个人去看了《你的名字》，16年的时候都不知道怎么去电影院哈哈。</p>
         <p>2024.06.29: [小事] 不开心。</p>
+        <p>2024.06.27: [小事] 买了leizheng2005.com和cn的域名，虽然到现在为止都没有用过cn。</p>
         <p>2024.06.10: [节日] 去钟楼给桂小姐送点西安特产吧。</p>
         <p>2024.06.01: [小事] 和好朋友第一次去了西安交通大学，第一次吃纸包鱼。</p>
         <p>2024.05.31: [节日] 收到桂小姐的六一蛋糕，谢谢你。好久没吃蛋糕了，哈哈。第一次收到朋友送的蛋糕。</p>
