--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
                       <span lang="en">Versions:</span>
                     </p>
                       <ul style="padding-left: 40px;">
-                          <li><a href="Version/Version1-0/version1-0.html">Version1-0</a></li>
-                          <li><a href="Version/Version1-1/version1-1.html">Version1-1</a></li>
+                          <li><a href="Version/Version1-0/version1-0.html">Version1-0</a> ---2024.06.27-2024.11.02</li>
+                          <li><a href="Version/Version1-1/version1-1.html">Version1-1</a> ---2024.11.02-2024.11.04</li>
                       </ul>
 
                           <script type='text/javascript' id='clustrmaps'
