--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
                 </div>
                 <div class="section-content">
                     <div lang="en">
-
+                        I come from a small town in Hengyang, Hunan Province. I came from the countryside to study and live in a big city.<br>
+                        I am currently a junior student, majoring in artificial intelligence, and on the way to studying neuroscience.<br>
+                        <blockquote>
+                            <p>"Sometimes it's the very people who no one imagines anything of who do the things no one can imagine." - 《The Imitation Game》</p>
+                        </blockquote>
+                        Thank you for everyone's help on the road to study.
                     </div>
                     <div lang="zh">
                       来自湖南省衡阳市一个小镇上，从农村来到大城市学习与生活。目前是大三学生，人工智能专业，在学习神经科学的路上。<br>
