--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
                 </div>
                 <div class="section-content">
                     <div lang="en">
-                        I come from a small town in Hengyang, Hunan Province. I came from the countryside to study and live in a big city.<br>
-                        I am currently a junior student, majoring in artificial intelligence, and on the way to studying neuroscience.<br>
-                        <blockquote>
+                        <p style="padding-left: 20px;">I come from a small town in Hengyang, Hunan Province. I came from the countryside to study and live in a big city.</p><br>
+                        <p style="padding-left: 20px;">I am currently a junior student, majoring in artificial intelligence, and on the way to studying neuroscience.</p><br>
+                        <blockquote >
                             <p>"Sometimes it's the very people who no one imagines anything of who do the things no one can imagine." - 《The Imitation Game》</p>
                         </blockquote>
-                        Thank you for everyone's help on the road to study.
+                        <p style="padding-left: 20px;">Thank you for everyone's help on the road to study.</p>
                     </div>
                     <div lang="zh">
-                      来自湖南省衡阳市一个小镇上，从农村来到大城市学习与生活。目前是大三学生，人工智能专业，在学习神经科学的路上。<br>
-                        与自己和解，接受自己是一个普通人，也相信自己可以积极面对所有挑战。成长是一段艰难的历程，需要一遍遍打破以往的观念，不断面对内心的恐惧，同时保有多种截然不同的观点。<br>
-                        谢谢一路走来，老师同学朋友师兄亲人等帮助，在迷茫无助的时候伸以援手。
+                      <p style="padding-left: 20px;">来自湖南省衡阳市一个小镇上，从农村来到大城市学习与生活。目前是大三学生，人工智能专业，在学习神经科学的路上。</p><br>
+                        <p style="padding-left: 20px;">与自己和解，接受自己是一个普通人，也相信自己可以积极面对所有挑战。成长是一段艰难的历程，需要一遍遍打破以往的观念，不断面对内心的恐惧，同时保有多种截然不同的观点。</p><br>
+                        <p style="padding-left: 20px;">谢谢一路走来，老师同学朋友师兄亲人等帮助，在迷茫无助的时候伸以援手。</p>
                     </div>
 
                     <div id="thanks" class="section">
