--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <span class="toggle-icon">▼</span>
                 </div>
                 <div class="section-content">
-                    <div lang="en">Bachelor...</div>
+                    <div lang="en">Undergraduate experience is temporarily available in Chinese...</div>
                     <div lang="zh">
                       <div id="bachelor-student" class="section">
                           <div class="section-header" onclick="toggleSection(this)">
