--- a/index.html
+++ b/index.html
@@ -126,10 +126,9 @@
                 </div>
                 <div class="section-content">
                     <div lang="en">
-                        <p style="padding-left: 20px;">I come from a small town in Hengyang, Hunan Province. I came from the countryside to study and live in a big city.</p>
-                        <p style="padding-left: 20px;">I am currently a junior student, majoring in artificial intelligence, and on the way to studying neuroscience.</p>
+                        <p style="padding-left: 20px;">I come from a small town in Hengyang, Hunan Province. Currently, I am a junior majoring in artificial intelligence, and I am on my way to studying neuroscience.</p>
                         <p style="padding-left: 20px;">"Sometimes it's the very people who no one imagines anything of who do the things no one can imagine." - 《The Imitation Game》</p>
-                        <p style="padding-left: 20px;">Thank you for everyone's help on the road to study.</p>
+                        <p style="padding-left: 20px;">Thank you to everyone who has supported me on my educational journey.</p>
                     </div>
                     <div lang="zh">
                       <p style="padding-left: 20px;">来自湖南省衡阳市一个小镇上，从农村来到大城市学习与生活。目前是大三学生，人工智能专业，在学习神经科学的路上。</p>
