--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
                 </div>
                 <div class="section-content">
                     <div lang="en">
-                        <p style="padding-left: 20px;">I come from a small town in Hengyang, Hunan Province. Currently, I am a junior majoring in artificial intelligence, and I am on my way to studying neuroscience.</p>
+                        <p style="padding-left: 20px;">I come from a small town in Hengyang, Hunan Province. I am a junior pursuing a major in Artificial Intelligence, with the intention of furthering my studies in the field of neuroscience.</p>
                         <p style="padding-left: 20px;">"Sometimes it's the very people who no one imagines anything of who do the things no one can imagine." - 《The Imitation Game》</p>
-                        <p style="padding-left: 20px;">Thank you to everyone who has supported me on my educational journey.</p>
+                        <p style="padding-left: 20px;">I would like to express my heartfelt gratitude to all those who have supported me throughout my educational journey.</p>
                     </div>
                     <div lang="zh">
-                      <p style="padding-left: 20px;">来自湖南省衡阳市一个小镇上，从农村来到大城市学习与生活。目前是大三学生，人工智能专业，在学习神经科学的路上。</p>
-                        <p style="padding-left: 20px;">与自己和解，接受自己是一个普通人，也相信自己可以积极面对所有挑战。成长是一段艰难的历程，需要一遍遍打破以往的观念，不断面对内心的恐惧，同时保有多种截然不同的观点。</p>
+                      <p style="padding-left: 20px;">来自湖南省衡阳市一个小镇上，目前是大三学生，人工智能专业，在学习神经科学的路上。INTP，好久不追番了，得花时间了解自己。</p>
+                        <p style="padding-left: 20px;">与自己和解，接受自己是一个普通人，也相信自己可以积极面对所有挑战。成长是一段艰难的历程，需要一遍遍打破以往的观念，不断面对内心的恐惧，同时保有多种截然不同的观点。所以，只陈述事实，不夹带负面情绪，不美化未曾走过的路。</p>
                         <p style="padding-left: 20px;">谢谢一路走来，老师同学朋友师兄亲人等帮助，在迷茫无助的时候伸以援手。</p>
                     </div>
 
@@ -213,7 +213,7 @@
                     <span class="toggle-icon">▼</span>
                 </div>
                 <div class="section-content">
-                    <div lang="en">Undergraduate experience is temporarily available in Chinese...</div>
+                    <div lang="en">My undergraduate experience is temporarily presented in Chinese....</div>
                     <div lang="zh">
                       <div id="bachelor-student" class="section">
                           <div class="section-header" onclick="toggleSection(this)">
@@ -391,7 +391,7 @@
                 </div>
                 <div class="section-content">
                     <div lang="en">
-                      For the English news section, just write something more important and formal...
+                      For the English news section, focus on writing content that is both significant and formal.
                     </div>
                     <div lang="zh">
                         <p>2024.11.01: [小事] 收到我哥的红包了，还是很开心的。</p>
